# wormlinks

./: .gitignore  GEMINI - Copy.md  GEMINI.md  README.md  TODO.md  package.json
WindowsInstaller/: wormlinks_v0.1.0.msi
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: automation.rs  lib.rs  main.rs  ocr.rs
src/routes/: +page.svelte
