[package]
name = "wormlinks-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "wormlinks_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
http = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1.3"
windows = { version = "0.62.2", features = ["Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Com", "Graphics_Imaging", "Media_Ocr", "Storage_Streams", "Win32_Graphics_Gdi", "Win32_System_Ole", "Win32_System_Threading"] }
